--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -60,7 +60,7 @@ mark-ovredir-focused = true;
 detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
-vsync = true;
+vsync = false;
 # sw-opti = true;
 # unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
